--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>jackson-core</artifactId>
             <version>2.18.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.11</version>
+        </dependency>
 
     </dependencies>
 
